Ensure header doesn't grow on mobile

--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ body {
     
     display: flex;
     flex-flow: row nowrap;
-    flex: 1;
+    flex: 0;
     justify-content: space-between;
     align-items: center;
     height: 6vh;
